--- a/src/EquipmentItem.css
+++ b/src/EquipmentItem.css
@@ -65,4 +65,20 @@
       text-align: center; /* Текст по центру */
     }
   }
+  .back-button {
+    background-color: #4CAF50; /* Зеленый цвет */
+    color: white; /* Белый цвет текста */
+    padding: 10px 20px; /* Внутренний отступ */
+    border: none; /* Без границы */
+    border-radius: 5px; /* Скругленные углы */
+    cursor: pointer; /* Указатель при наведении */
+    font-size: 16px; /* Размер шрифта */
+    transition: background-color 0.3s ease; /* Плавный переход */
+    text-decoration: none; /* Убираем подчеркивание */
+    display: inline-block; /* Встраиваемый блок */
+  }
+  
+  .back-button:hover {
+    background-color: #45a049; /* Более темный оттенок при наведении */
+  }
   
